# upctl-svc

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
src/: agent.rs  config.rs  handlers.rs  main.rs
