[package]
name = "upctl-svc"
version = "0.1.0"
edition = "2021"
description = "Ticket management service — Gitea proxy, attachment storage"

[dependencies]
htycommons = { git = "https://github.com/alchemy-studio/AuthCore.git" }
axum = "0.8"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
reqwest = { version = "^0.12", features = ["json"] }
uuid = { version = "^1", features = ["v4"] }
tokio = { version = "^1", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
dotenv = "^0.15"
anyhow = "^1"
chrono = "^0.4"
hex = "^0.4"
hmac = "^0.12"
sha2 = "^0.10"
